fix(client-css): remove nowrap on tag chips

--- a/packages/client-css/scss/m/imagepage.module.scss
+++ b/packages/client-css/scss/m/imagepage.module.scss
@@ -102,7 +102,6 @@
   margin: variables.$size-0;
   display: inline-block;
   user-select: none;
-  white-space: nowrap;
   border-radius: variables.$radius;
   background-color: var(--subtext0);
   padding-inline: variables.$size-2;
